# enex_analysis_engine

./: .gitignore  ASHPB_paper_T0_and_service hot water.ipynb  ASHPB_paper_plot.ipynb  ASHPB_paper_plot2.ipynb  ASHPB_paper_plot_T0.ipynb  ASHP_Monte.py  ASHP_plot.ipynb  ASHP_plot_HB.ipynb  En_system_intergrated.py  En_system_seperated.py  Energy_system.py  GSHPB_exergy_simulation_results.csv  GSHPB_paper.ipynb  GSHP_plot.ipynb  README.md  Tank_stratification_model_results.ipynb  gshpb_simulation_results_refactored.csv  plot.ipynb  pyproject.toml  ssh-keygen -t ed25519 -C pshpsh3651@gmail.com  ssh-keygen -t ed25519 -C pshpsh3651@gmail.com.pub
data/: GHE_exergy.csv  GHE_exergy_X_f.csv  GHE_exergy_test.csv  dual_setpoint_smalloffice.csv  ex_eff_ASHPC.csv  ex_eff_ASHPH.csv  ex_eff_EB.csv  ex_eff_EH.csv  ex_eff_EH_surf_temp.csv  ex_eff_GB.csv  ex_eff_GSHPB.csv  ex_eff_GSHPC.csv  ex_eff_GSHPH.csv  ex_eff_HPB.csv  ex_eff_SAGB.csv
data/processed/: small_office_cooling_filtered.csv  small_office_heating_filtered.csv  small_office_ready.csv
paper/Annual_ASHP_enex_analysis/: Fig06_cop_contour.py  Fig07_fan_characteristics.py  Fig11_carnot_efficiency_grid.py  Fig12_exergy_of_air_flow_rate.py  (+6 more)
plot code/: Fig03_T0_and_loads.py  Fig03_environment_and_loads copy.py  Fig03_environment_and_loads.py  Fig06_cop_contour.py  Fig06_cop_map.py  Fig07_fan_characteristics.py  Fig09_energy_efficiency_grid.py  Fig10_exergy_efficiency_grid.py  Fig11_carnot_efficiency_grid.py  Fig11_performance_distributions.py  Fig12_exergy_of_air_flow_rate.py  Fig12_load_duration_curves.py  Fig13_January_August.py  Fig13_operating_envelope.py  Fig14_April_October.py  Fig15_monthly_analysis.py  FigA1.internal_heat_gains.py  GraphicalAbstract_COP_exergy_ratio.py  GraphicalAbstract_exergy_efficiency.py  data_prep.py  data_setting.py  figure_setting.py  plot.py
(+11 files in other folders)
